--- a/index.html
+++ b/index.html
@@ -514,15 +514,19 @@
                 const today = new Date().toDateString();
                 let dailyViews = getStorageItem(STORAGE_KEYS.DAILY_VIEWS, 0);
 
+                console.log('CHECK_ACCESS: lastViewDate=', lastViewDate, 'today=', today, 'dailyViews=', dailyViews);
+
                 if (lastViewDate !== today) {
                     // New day, reset views
                     dailyViews = 0;
                     setStorageItem(STORAGE_KEYS.DAILY_VIEWS, 0);
                     setStorageItem(STORAGE_KEYS.LAST_VIEW_DATE, today);
+                    console.log('CHECK_ACCESS: New day detected, reset to 0');
                 }
 
                 // Calculate display value: simply show how many views are left
                 const viewsRemaining = Math.max(0, FREE_DAILY_LIMIT - dailyViews);
+                console.log('CHECK_ACCESS: Setting viewsRemaining=', viewsRemaining);
                 setAccessState({
                     plan: PLANS.FREE,
                     viewsRemaining,
@@ -565,9 +569,12 @@
 
             // Reset daily views (for testing purposes)
             const resetDailyViews = () => {
+                console.log('RESET: Before reset, dailyViews =', getStorageItem(STORAGE_KEYS.DAILY_VIEWS, 0));
                 setStorageItem(STORAGE_KEYS.DAILY_VIEWS, 0);
                 setStorageItem(STORAGE_KEYS.LAST_VIEW_DATE, new Date().toDateString());
+                console.log('RESET: After reset, dailyViews =', getStorageItem(STORAGE_KEYS.DAILY_VIEWS, 0));
                 checkAccess();
+                console.log('RESET: After checkAccess, state should update');
             };
 
             const upgradeToPlan = (plan) => {
