--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 id: '1',
                 title: 'REITs Explained',
                 description: 'How Real Estate Investment Trusts work and why they matter.',
-                url: 'videos/1 REITs.mp4',
+                url: 'videos/1_REITs.mp4',
                 thumbnail: '',
                 category: 'Finance',
                 duration: '2:40'
@@ -113,7 +113,7 @@
                 id: '2',
                 title: 'Defence Contractor Consolidation',
                 description: 'The dramatic story of how the defence industry consolidated.',
-                url: 'videos/2 Defence contractor consolidation.mp4',
+                url: 'videos/2_Defence_contractor_consolidation.mp4',
                 thumbnail: '',
                 category: 'Defence Tech',
                 duration: '3:03'
@@ -122,7 +122,7 @@
                 id: '3',
                 title: 'Anduril: The Arcade of Defence',
                 description: 'How Palmer Luckey built a defence tech empire after Oculus.',
-                url: 'videos/3 Anduril.mp4',
+                url: 'videos/3_Anduril.mp4',
                 thumbnail: '',
                 category: 'Defence Tech',
                 duration: '2:56'
@@ -131,7 +131,7 @@
                 id: '4',
                 title: 'Retro Arcade REITs',
                 description: 'The surprising intersection of gaming nostalgia and real estate.',
-                url: 'videos/4 Retro arcade REITs.mp4',
+                url: 'videos/4_Retro_arcade_REITs.mp4',
                 thumbnail: '',
                 category: 'Finance',
                 duration: '2:44'
@@ -140,7 +140,7 @@
                 id: '5',
                 title: 'Kwinana',
                 description: 'The business story behind this unique opportunity.',
-                url: 'videos/5 Kwinana.mp4',
+                url: 'videos/5_Kwinana.mp4',
                 thumbnail: '',
                 category: 'Real Estate',
                 duration: '1:30'
@@ -149,7 +149,7 @@
                 id: '6',
                 title: 'Global Median Income',
                 description: 'Understanding wealth distribution around the world.',
-                url: 'videos/6 Global Median Income.mp4',
+                url: 'videos/6_Global_Median_Income.mp4',
                 thumbnail: '',
                 category: 'Finance',
                 duration: '2:30'
