--- a/index.html
+++ b/index.html
@@ -1210,24 +1210,27 @@
                         onTouchStart={handleModalTouchStart}
                         onTouchEnd={handleModalTouchEnd}
                     >
-                        {/* Swipe/scroll indicator */}
-                        <div style={{
-                            display: 'flex',
-                            flexDirection: 'column',
-                            alignItems: 'center',
-                            marginBottom: '16px',
-                            color: 'rgba(255,255,255,0.5)',
-                            fontSize: '12px'
-                        }}>
-                            <div style={{
-                                width: '40px',
-                                height: '4px',
-                                background: 'rgba(255,255,255,0.3)',
-                                borderRadius: '2px',
-                                marginBottom: '8px'
-                            }} />
-                            <span>Scroll down to go back</span>
-                        </div>
+                        {/* Back button - always works */}
+                        <button
+                            onClick={() => onSwipeBack && onSwipeBack()}
+                            style={{
+                                display: 'flex',
+                                alignItems: 'center',
+                                justifyContent: 'center',
+                                gap: '8px',
+                                background: 'linear-gradient(135deg, #8B5CF6, #EC4899)',
+                                border: 'none',
+                                borderRadius: '25px',
+                                padding: '12px 24px',
+                                color: '#fff',
+                                fontSize: '16px',
+                                fontWeight: '600',
+                                cursor: 'pointer',
+                                marginBottom: '20px'
+                            }}
+                        >
+                            ← Back to Videos
+                        </button>
 
                         {/* Header */}
                         <div style={{
