Make free reels text more visible

--- a/index.html
+++ b/index.html
@@ -1639,14 +1639,14 @@
 
                         {/* Footer note */}
                         <p style={{
-                            color: 'rgba(255,255,255,0.6)',
-                            fontSize: '14px',
-                            marginTop: '24px',
+                            color: 'rgba(255,255,255,0.8)',
+                            fontSize: '15px',
+                            marginTop: '12px',
                             marginBottom: '20px',
                             fontWeight: '500'
                         }}>
                             {currentPlan === PLANS.FREE
-                                ? '🎬 6 FREE reels every day. Resets at midnight.'
+                                ? '6 FREE reels per day. Resets at midnight.'
                                 : 'Thank you for supporting MoonReelz!'}
                         </p>
                     </div>
